<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context="com.example.calculator.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFormula"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="end"
        android:textColor="@color/soft"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="formula"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="end"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormula"/>


    <GridLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="40dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/clear"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/soft"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/c"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/brackets"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/soft"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/brackets"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/percentage"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/soft"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/percentage"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/devide"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/soft"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/divide"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/seven"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/eight"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/nine"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/multiply"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/soft"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/four"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/five"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/six"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_6"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/plus"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/soft"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/plus"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/one"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/two"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/three"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_3"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/mines"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/soft"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/mines"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/zero"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/dot"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/dot"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/backspace"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/backspace"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/equal"
            android:layout_rowWeight="1"
            android:layout_rowSpan="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/soft"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/equal"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="15dp"/>
    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>